[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nihalkhann", email = "nihalghouri321@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "streamlit",
    "openpyxl"
]


[project.scripts]
giaic = "project2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
