[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nihalkhann", email = "nihalghouri321@gmail.com" }
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "pandas",
    "streamlit",
    "openpyxl"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^1.5.3"
streamlit = "^1.20.0"
openpyxl = "^3.1.2"
toml = "^0.10.2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
